*Updated*
-Reworked monitor views to better utilize meters & colors to communicate more information at a glance
-Moved math done on top data to the ajax controller to make it more independent of the view